# blobcache

./: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  justfile  run.sh
client/go/: bcclient.go  bcclient_darwin.go  bcclient_linux.go
client/go_client/: bcclient.go
client/python/: blobcache.py  pyproject.toml
client/rs/: Cargo.toml
client/rs/src/: bcp.rs  http.rs  lib.rs  service.rs  types.rs  unix.rs
client/rs/tests/: daemon_ephemeral.rs
client/zig/: bcp.zig  blobcache.zig  build.zig  build.zig.zon  lib.zig  types.zig  unix_client.zig
cmd/blobcache/: main.go
cmd/git-remote-bc/: main.go
doc/: 0.0_Blobcache.md  0.1_Introduction.md  0.2_Why_Blobcache.md  1.0_Concepts.md  1.1_Nodes.md  1.2_Volumes.md  1.3_Transactions.md  1.4_Schemas.md  6.00_Guides.md  6.01_Git_Remote.md  7.0_Configuration.md  8.00_CLI_Reference.md  8.1_Volumes.md  8.2_Tx.md  8.3_Daemon.md  8.4_Basicns.md  8.4_NS.md  8.5_GLFS.md  9.00_Articles.md  9.01_BCP_vs_HTTP.md  9.02_Blobcache_vs_IPFS.md  9.02_Volumes_vs_Files.md
docs/: 00_Design.md  00_Intro.md  01_Client_API.md  11_Client_API.md  22_Peer_Routing.md  23_Blob_Routing.md  24_Blob_Fetching.md  90_DRAFT_1.md
etc/: HowTo_Release.md  blobcache-diagram.excalidraw  blobcache.service  build_images.sh  get_tags.sh  install-systemd.sh  io.blobcache.blobcache.plist
etc/pebbletest/: pebble_test.go
plan/: 2025-07-06_bcfs.md  2025-09-07_pebble.md  2026-03_Lookup.md  2026-04-02_tui.md  2026-04-04_bcsys_copy.md  README.md
www/: blobcache.html  cheatsheet.html  glfs.html  hljson.html  index.html  install.sh  style.css
(+449 files in other folders)
