[package]
name = "blobcache"
version = "0.3.0"
edition = "2024"
homepage = "https://blobcache.io"
repository = "https://github.com/blobcache/blobcache"
description = "Library and Clients for Blobcache"
license = "MPL-2.0"

[dependencies]
base64 = "0.22"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
